# oudia

./: .editorconfig  .gitignore  README.md  pyproject.toml
docs/: OuDiaSpecification.en.md
src/oudia/: __init__.py  exporter.py  parser.py  types.py
tests/: test_all.py  test_parser.py
