[project]
name = "root"
version = "0.0.0"
readme = "README.md"


[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
]

[tool.rye.workspace]
members = ["packages/*"]

[tool.black]
target-version = ["py312"]
line-length = 120
